--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Drummer</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-  <link rel="shortcut icon" href="./images/icon/drum.png" type="image/png">
+  <link rel="shortcut icon" href="./images/icon/drums.png" type="image/png">
 </head>
 
 <body>
